--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,7 @@
     "description": "A DSN parser package.",
     "keywords": ["database","connection","datasource","dsn"],
     "homepage": "https://melonbytes.com",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Ray Bramwell",
-            "homepage": "http://melonbytes.com",
-            "role": "Developer"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "MelonBytes\\DSNParserPackage\\": "src/"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "require": {
+        "php": ">=5.4"
+    }
 }
