--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
             "MelonBytes\\DSNParser\\": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
 
